# 3d_editor

./: .gitignore  3Dmath.cpp  3Dmath.h  CMakeLists.txt  Editor.dsp  Editor.dsw  Editor.rc  Glext.h  README.md  architecture.html  build_mingw.bat  build_msvc.bat  compat.h  editor.cpp  editor.h  glutils.cpp  glutils.h  glwindow.cpp  glwindow.h  install_dependencies.bat  jpeg_compat.c  jpeg_wrapper.cpp  log.cpp  log.h  main.cpp  nurb.cpp  nurb.h  resource.h  shapes.cpp  shapes.h  texturemanager.cpp  texturemanager.h  windowsistem.cpp  windowsistem.h
